[gd_scene load_steps=15 format=3 uid="uid://bnifistlkqt16"]

[ext_resource type="Script" uid="uid://clc4ojotcw0fd" path="res://scripts/menu_2.gd" id="1_gs7e0"]
[ext_resource type="Texture2D" uid="uid://cbfewchaapunf" path="res://escenarios/fondo.jpg" id="2_7xhqk"]
[ext_resource type="StyleBox" uid="uid://hmbgjiffmsbd" path="res://escenas/select.tres" id="3_pjo2y"]
[ext_resource type="Texture2D" uid="uid://u4yijmt7dhpu" path="res://escenarios/btnescoger.png" id="4_thw5g"]
[ext_resource type="StyleBox" uid="uid://btl47jbhq7whl" path="res://extras/confg1.tres" id="5_bjbeq"]
[ext_resource type="Texture2D" uid="uid://ctmdd70y7kv4l" path="res://escenarios/conf.png" id="6_th6fv"]
[ext_resource type="StyleBox" uid="uid://btega6m1gtrbs" path="res://extras/volver1.tres" id="7_outsc"]
[ext_resource type="Texture2D" uid="uid://dp7ge6gydfry2" path="res://escenarios/back.png" id="8_ga6yf"]
[ext_resource type="Texture2D" uid="uid://c1dvhkcvvmgv2" path="res://escenarios/titulo.png" id="9_xkvja"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7828r"]
texture = ExtResource("2_7xhqk")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_72kx7"]
texture = ExtResource("4_thw5g")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_oowib"]
texture = ExtResource("6_th6fv")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lien3"]
texture = ExtResource("8_ga6yf")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_prj13"]
texture = ExtResource("9_xkvja")

[node name="menu2" type="Node2D"]
process_mode = 3
script = ExtResource("1_gs7e0")

[node name="Panel" type="Panel" parent="."]
offset_left = 2.0
offset_top = -1.0
offset_right = 1288.0
offset_bottom = 718.0
theme_override_styles/panel = SubResource("StyleBoxTexture_7828r")

[node name="escoger" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 509.0
offset_top = 314.0
offset_right = 788.0
offset_bottom = 433.0
theme_override_styles/focus = ExtResource("3_pjo2y")
theme_override_styles/hover = ExtResource("3_pjo2y")
theme_override_styles/normal = SubResource("StyleBoxTexture_72kx7")

[node name="confg" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 509.0
offset_top = 419.0
offset_right = 784.0
offset_bottom = 538.0
theme_override_styles/focus = ExtResource("5_bjbeq")
theme_override_styles/hover = SubResource("StyleBoxTexture_oowib")
theme_override_styles/normal = ExtResource("5_bjbeq")

[node name="exit" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 530.0
offset_top = 535.0
offset_right = 768.0
offset_bottom = 640.0
theme_override_styles/focus = ExtResource("7_outsc")
theme_override_styles/hover = SubResource("StyleBoxTexture_lien3")
theme_override_styles/normal = ExtResource("7_outsc")

[node name="Panel2" type="Panel" parent="."]
offset_left = 471.0
offset_top = 96.0
offset_right = 815.0
offset_bottom = 246.0
theme_override_styles/panel = SubResource("StyleBoxTexture_prj13")

[connection signal="pressed" from="Panel/escoger" to="." method="_on_escoger_pressed"]
[connection signal="pressed" from="Panel/confg" to="." method="_on_confg_pressed"]
[connection signal="pressed" from="Panel/exit" to="." method="_on_exit_pressed"]
